# godot-spdlog

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: godot-spdlog.gdextension  icon.svg.import  main.tscn  project.godot
src/: logger.cpp  logger.h  register_types.cpp  register_types.h
